1.0.9 - Fixed images being blurred
Fixed images being blurred with uncrop enabled and 'Use banners as background' enabled.

--- a/twitter/twitter-tweaks.user.css
+++ b/twitter/twitter-tweaks.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           Twitter Tweaks
-@version        1.0.8
+@version        1.0.9
 @description    A collection of tweaks for: Uncropping images, hiding trends, Avatar roundness, moving header aside, and more!!
 @updateURL      https://codeberg.org/Freeplay/UserStyles/raw/branch/main/twitter/twitter-tweaks.user.css
 @preprocessor   stylus
@@ -44,8 +44,8 @@
 
 ==/UserStyle== */
 
-/* Update 1.0.8
-- Fixes plus polishing!
+/* Update 1.0.9
+- Fixed images being blurred with uncrop enabled and 'Use banners as background' enabled.
 */
 @-moz-document domain("twitter.com") {
 	
@@ -106,6 +106,7 @@
 			width: 100%;
 			max-width: 100%;
 			margin: auto !important;
+			opacity: 1;
 			if maxHeight {
 				max-height: calc(90vh - 55px) !important; /* -55px is height of the header */
 				background-size: contain !important;
@@ -122,6 +123,9 @@
 			background-size: cover !important;
 			filter: blur(30px);
 			transform: scale(1.2);
+			+ img {
+				opacity: 1 !important;
+			}
 		}
 	}
 	if resizeSidebar {
@@ -161,7 +165,6 @@
 	}
 	
 	if hideTweetBoxTL {
-		
 		[data-testid="primaryColumn"] > div > [class="css-1dbjc4n r-yfoy6g r-184en5c"]:nth-child(2) {
 			display: none;
 			+ div {
